--- a/src/style/style.css
+++ b/src/style/style.css
@@ -117,6 +117,21 @@
   color: white;
 }
 
+.header-button {
+  background-color: #191a1e;
+  color: rgb(233, 233, 233);
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 10px 10px 0px 0px;
+  border: 0;
+  box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgba(95, 94, 94, 0.25), inset 1.5px 1.5px 3px #0e0e0e, inset -1.5px -1.5px 3px #5f5e5e;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.header-button:hover {
+  color: #01aade;
+}
+
 #footer {
   background-color: #242424;
   color: white;
