--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -6,9 +6,10 @@ $btn: rgb(233, 233, 233);
 .header{
     background-color: $black;
     margin-bottom: 1rem;
+    padding: 0 1rem;
 }
 .header-content{
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
 }
 
