--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,11 @@
 .header {
   background-color: #242424;
   margin-bottom: 1rem;
+  padding: 0 1rem;
 }
 
 .header-content {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
@@ -208,27 +209,71 @@ button:focus {
 }
 
 .product-card {
-  border: 2px solid black;
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  padding: 2rem;
+  padding: 1rem;
   background-color: white;
+  border-radius: 10px;
+  width: 15rem;
+  height: 18rem;
 }
 .product-card p {
   color: #242424;
+  padding: 10px 0 3px 0;
 }
 .product-card img {
-  max-width: 13rem;
+  height: 14rem;
 }
 .product-card:hover {
-  transform: translateY(-10px);
   transition: all 0.3s;
-  box-shadow: 0 4px 15px black;
+  box-shadow: 0px 0px 19px 1px rgba(0, 0, 0, 0.35);
+}
+.product-card .stars {
+  padding-bottom: 10px;
+  font-size: 15px;
+}
+.product-card .price {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #01aade;
+}
+.product-card .image {
+  height: 10rem;
 }
 
 .products-container {
-  border: 1px solid blue;
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 2rem;
+  place-items: center;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.heading {
+  margin: 2rem 0 1rem 0;
+  color: #01aade;
+}
+
+.single-product-container {
+  background-color: white;
+  padding: 2rem;
+  margin: 2rem 7rem;
+  border-radius: 10px;
+  display: flex;
+}
+.single-product-container .images {
+  border: 1px solid black;
+  height: 20rem;
+  width: 40%;
+}
+.single-product-container .details {
+  height: 20rem;
+  width: 60%;
+  margin-left: 2rem;
+}
+
+.red {
+  color: red;
 }
 
 .banner {
@@ -384,8 +429,9 @@ button:focus {
 }
 
 .body {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .full {
