--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,8 +13,9 @@ $blue: #1ba4db;
     font-family: 'Josefin Sans', sans-serif;
 }
 .body{
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
+    padding: 0 1rem;
 }
 .full{
   background-color: rgb(233, 233, 233);
