--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -149,8 +149,8 @@ $btn: rgb(233, 233, 233);
     display: flex;
     justify-content: space-between;
     max-width: 1200px;
-    padding: 3rem;
-    margin: 0 auto;
+    padding: 3rem 0;
+    margin: 0 auto 0;
 }
 .links{
     display: grid;
