--- a/src/style/_product.scss
+++ b/src/style/_product.scss
@@ -132,3 +132,12 @@ $red: #c3073f;
     color: white;
     padding: 10px;
 }
+
+
+//Filter box
+
+.category-link{
+    list-style: none;
+    text-decoration: none;
+    cursor: pointer;
+}
