--- a/src/style/_product.scss
+++ b/src/style/_product.scss
@@ -140,4 +140,56 @@ $red: #c3073f;
     list-style: none;
     text-decoration: none;
     cursor: pointer;
+    padding-left: 6px;
+    &:hover{
+        background-color: rgb(184, 184, 184);
+        color: white;
+    }
+    &:active{
+        background-color: rgb(137, 137, 137);
+    }
+}
+.filterbox{
+    margin-right: 1rem;
+    max-width: 14rem;
+    width: 12rem;
+    max-height: 50rem;
+    padding: 1rem;
+}
+
+.filterbox-products{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.show-hide{
+    display: block;
+    cursor: pointer;
+}
+.hide{
+    display: none;
+}
+.filter-section-hidden{
+    display: grid;
+}
+
+.cat-head{
+    background-color: #282828;
+    color: white;
+    padding: 6px;
+}
+.categoryBox{
+    margin-top: 10px;
+    line-height: 25px;
+    margin-bottom: 2rem;
+}
+.clear-filters{
+    cursor: pointer;
+    border: 0;
+    float: right;
+    margin-top: 2rem;
+    border-radius: 5px;
+    &:hover{
+        color: rgb(203, 203, 203);
+    }
 }
