--- a/src/style/_Home.scss
+++ b/src/style/_Home.scss
@@ -63,6 +63,9 @@
 .four-container{
     display: flex;
     justify-content: space-around;
+    a{
+        text-decoration: none;
+    }
 }
 .category-card{
     border: 0;
@@ -109,5 +112,9 @@
         width: 100%;
         height: 100%;
         border-radius: 5px;
+    }
+    
+    a{
+        text-decoration: none;
     }
 }
