--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -39,114 +39,18 @@ $btn: rgb(233, 233, 233);
     position: relative;
     right: 5rem;
 }
-// .search-container {
-//   position: relative;
-//   --size-button: 30px;
-// }
-
-// .search-input {
-//   padding-left: var(--size-button);
-//   height: var(--size-button);
-//   font-size: 13px;
-//   border: none;
-//   color: #fff;
-//   outline: none;
-//   width: var(--size-button);
-//   transition: all ease 0.3s;
-//   background-color: #191A1E;
-//   box-shadow: 1.5px 1.5px 3px #0e0e0e, -1.5px -1.5px 3px rgb(95 94 94 / 25%), inset 0px 0px 0px #0e0e0e, inset 0px -0px 0px #5f5e5e;
-//   border-radius: 50px;
-//   cursor: pointer;
-// }
-
-// .search-input:focus,
-// .search-input:not(:invalid) {
-//   width: var(--size-button);
-//   cursor: text;
-//   box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 1.5px 1.5px 3px #0e0e0e, inset -1.5px -1.5px 3px #5f5e5e;
-// }
-
-// .search-input:focus + .search-icon,
-// .search-input:not(:invalid) + .search-icon {
-//   pointer-events: all;
-//   cursor: pointer;
-// }
-
-// .search-container .search-icon {
-//   position: absolute;
-//   width: 30px;
-//   height: 30px;
-//   top: 0;
-//   left: 0;
-//   padding: 8px;
-//   pointer-events: none;
-// }
-// .search-container .search-icon svg {
-//   width: 100%;
-//   height: 100%;
-//   color: $blue;
-// }
-
-.input-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    position: relative;
-  }
-  
-  .search-input {
-    border-style: none;
-    height: 35px;
-    width: 35px;
-    padding: 5px;
+.search-input {
+    margin: 10px;
+    background: none;
+    border: none;
     outline: none;
-    border-radius: 50%;
-    transition: .5s ease-in-out;
-    background-color: $red;
-    box-shadow: 0px 0px 3px #f3f3f3;
-    padding-right: 30px;
-    color: #fff;
-  }
-  
-  .search-input::placeholder,
-  .search-input {
-    // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    max-width: 190px;
+    padding: 7px 15px;
     font-size: 15px;
-  }
-  
-  .search-input::placeholder {
-    color: #8f8f8f;
-  }
-  
-  .search-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    right: 0px;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    outline: none;
-    border-style: none;
-    border-radius: 50%;
-    pointer-events: painted;
-    background-color: transparent;
-    transition: .2s linear;
-  }
-  
-  .search-icon:focus ~ .search-input,
-  .search-input:focus {
-    box-shadow: none;
-    width: 200px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom: 3px solid $red;
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
-  
-  
+    border-radius: 9999px;
+    box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 1.5px 1.5px 3px #0e0e0e, inset -1.5px -1.5px 3px #5f5e5e;
+    color: #fff;
+}
   
 .cart-icon{
     font-size: 2.4rem;
