--- a/src/style/_Cart.scss
+++ b/src/style/_Cart.scss
@@ -41,6 +41,7 @@ $light-blue: #1ba5db94;
   display: flex;
   flex-direction: column;
   margin: auto;
+  font-size: larger;
 }
 .cart-item-img{
   max-width: 50px;
@@ -92,4 +93,23 @@ $light-blue: #1ba5db94;
   margin-bottom: 10px;
 }
   
-  
+.img-name{
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
+.empty{
+  display: grid;
+  justify-content: center;
+}
+
+.clear{
+  display: block;
+    margin-left: auto;
+    margin-top: 1rem;
+}
+.cost{
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem 0 1rem 0;
+}
