--- a/src/style/_product.scss
+++ b/src/style/_product.scss
@@ -144,11 +144,11 @@ $red: #c3073f;
     cursor: pointer;
     padding-left: 6px;
     &:hover{
-        background-color: rgb(184, 184, 184);
-        color: white;
+        background-color: white;
+        color: $blue;
     }
     &:active{
-        background-color: rgb(137, 137, 137);
+        background-color: rgb(229, 229, 229);
     }
 }
 .filterbox{
