--- a/src/style/_MediaQuery.scss
+++ b/src/style/_MediaQuery.scss
@@ -12,6 +12,18 @@
       height: 18rem;
     }
   }
+  .swiper-slide, .swiper-slide-active{
+    display: grid;
+    place-content: center;
+  }
+  .single-product-container {
+    margin: 2rem 1rem;
+  }
+  .single-product-container .images .main .main-swiper {
+    max-width: 16rem;
+  }
+
+
 }
 @media only screen and (max-width: 900px) {
   .four-container {
@@ -24,11 +36,6 @@
   }
   .LoginSignUpBox {
     width: 55vw;
-  }
-}
-@media only screen and (max-width: 690px) {
-  .products-container {
-    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -65,6 +72,50 @@
   .search {
     right: 2rem;
   }
+  .single-product-container{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  .single-product-container .images{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    row-gap: 1.5rem;
+    .all{
+      flex-direction: row;
+      column-gap: 2rem;
+      img{
+        max-width: 4rem;
+      }
+    }
+  }
+  .single-product-container {
+    margin: 2rem 4rem;
+  }
+}
+@media only screen and (max-width: 690px) {
+  .products-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media only screen and (max-width: 600px){
+  .single-product-container .details {
+    margin: 0;
+  }
+  .single-product-container .images .all{
+    column-gap: 1rem;
+    img{
+      max-width: 3rem;
+    }
+  }
+  .single-product-container {
+    margin: 1rem 1rem;
+  }
+  .details{
+    font-size: larger;
+  }
+  
 }
 @media only screen and (max-width: 570px) {
   .four-container .category-card {
@@ -142,11 +193,17 @@
     width: 40%;
   }
   .product-card img {
-    height: 11rem;
+    height: 8rem;
     max-width: 12rem;
+  }
+  .search-input{
+    width: 130px;
   }
 }
 @media only screen and (max-width: 435px) {
+  .size{
+    padding: 2px 4px;
+  }
   .box img {
     width: 55px;
     height: 45px;
@@ -208,10 +265,9 @@
   .single-product-page .details {
     width: 100%;
     margin-left: 0;
-    font-size: smaller;
   }
   .details h2 {
-    font-size: small;
+    font-size: large;
   }
   .details h4 {
     font-size: 1rem;
